ammended desklet.js to try to remedy with modal appearing when clicking on calendar event

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,29 @@ output.txt
 *.temp
 temp/
 tmp/
+
+# Development and backup files
+*_backup
+*_backup[0-9]*
+*_enhanced
+*_fixed
+*-backup.js
+*-backup[0-9]*.js
+test_*.sh
+diagnose.sh
+view_logs.sh
+
+# Development documentation
+*_DIAGNOSIS.md
+*_ANALYSIS.md
+*_SOLUTION.md
+*_SUMMARY.md
+POSITIONING.md
+FIXED_*.md
+
+# Installation reports
+installation_report.txt
+requirements_minimal.txt
+
+# Python virtual environment for desklet
+ncalendar_venv/
